Refactorized patch and update logic, added validations to update request and fixed a bug for Recipe setIngredients and setInstructions that removes the list reference, now it uses the same reference but clears the list and adds the whole collection instead.